--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mini game mario-jump">
     <title>Mario Mini Game</title>
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+
 </head>
+
 <body>
     <main class="board">
-        
+        <div class="clouds"></div>
+        <div class="mario"></div>
+        <div class="pipe">
+            <img src="./src/images/pipe.png" alt="image of a pipe">
+        </div>
     </main>
+
+    <script type="text/javascript" src="./src/js/index.js"></script>
 </body>
+
 </html>
