html e css pronto

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
 <body>
     <main class="board">
-        <div class="clouds"></div>
-        <div class="mario"></div>
-        <div class="pipe">
-            <img src="./src/images/pipe.png" alt="image of a pipe">
-        </div>
+        <img src="./src/images/clouds.png" alt="clouds image" class="clouds ">
+        <img src="./src/images/mario.gif" alt="mario gif" class="mario">
+        <img src="./src/images/pipe.png" alt="image of a pipe" class="pipe">
     </main>
 
     <script type="text/javascript" src="./src/js/index.js"></script>
