--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <main class="board">
-        <img src="./src/images/clouds.png" alt="clouds image" class="clouds ">
-        <img src="./src/images/mario.gif" alt="mario gif" class="mario">
-        <img src="./src/images/pipe.png" alt="image of a pipe" class="pipe">
+        <img src="./src/images/clouds.png" alt="clouds image" class="clouds" id="clouds">
+        <img src="./src/images/mario.gif" alt="mario gif" class="mario" id="mario">
+        <img src="./src/images/pipe.png" alt="image of a pipe" class="pipe" id="pipe">
     </main>
 
     <script type="text/javascript" src="./src/js/index.js"></script>
